# hash_cryptography_tool

./: .gitignore  .prettierignore  .spaceignore  Cargo.toml  LICENSE  Pipfile  README.md  Spacefile  kry  package.json  pnpm-lock.yaml  svelte.config.js  vercel.json
.github/workflows/: app_checks.yml  deploy.yml
a/: README.md  kry
a/src/: main.py  requirements.txt
a/src/_templ/: _base.html
a/src/_templ/bcrypt/: hash_verify.html
a/src/_templ/home/: hash.html  pass_hash_verify.html
a/src/app/: __init__.py  _router.py  bcrypt.py
a/src/kry/: datt.py  plugins.py
src/: app.pcss  app.rs  lib.rs  main.py  main.rs
src/_static/scripts/: copy_clear.js
src/_static/styles/: global.css
src/_templ/: _base.html  bcrypt.html  home.html
src/_templ/bcrypt/: bcrypt_hash.html  bcrypt_hash_verify.html  bcrypt_salt.html  hash.html  salt.html
src/_templ/home/: base64.html  encrypt_decrypt.html  hash.html  pass_hash.html  pass_hash_verify.html  salt.html
src/app/: __init__.py  bcrypt.py  home.py
src/components/: layout.rs  mod.rs  theme.rs  ui.rs
src/components/main/: AlphaNumeric.svelte  Base64.svelte  EncryptDecrypt.svelte  Hash.svelte  PasswordHash.svelte  PasswordHashVerifier.svelte  Salt.svelte  UUID.svelte
src/components/main/bcrypt/: ArgonHashVerifier.svelte  BcryptHash.svelte  BcryptHashVerifier.svelte  ScryptHash.svelte  ScryptHashVerifier.svelte
src/components/main/pass_hash/: ArgonHash.svelte  PasswordHash.svelte  PasswordHashVerifier.svelte  ScryptHash.svelte  ScryptHashVerifier.svelte
src/kry/: gupta.py  plugins.py
src/pages/: encrypt.rs  hashes.rs  mod.rs  pass_hash.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/bcrypt/: +page.svelte
src/routes/pass_hash/: +page.svelte
src/tools/: better_auth_scrypt_hash.ts  encrypt_decrypt.ts  hash_tools.ts  kry.ts
src/utils/: codec.rs  encrypt.rs  hash.rs  mod.rs  pass_hash.rs
style/: tailwind.css
